--- a/.github/workflows/build_lint_test.yml
+++ b/.github/workflows/build_lint_test.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Prettier Action
       uses: creyD/prettier_action@v4.3
       
-    - name: ESLint Action
-      uses: ninosaurus/eslint-check@v5.3.1
+    - name: Run ESLint
+      uses: stefanoeb/eslint-action@1.0.2
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
