--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,30 +1,47 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# Continuous Integration
 
-name: CI Action
+name: Test and Build
 
 on:
   push:
-    branches: ['staging']
+    branches: [staging]
+  pull_request:
+    types: [opened, reopened]
+    branches: [main]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        node-version: [22.x]
+        node-version: [18.x, 22.x]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Prettier Action
-        uses: creyD/prettier_action@v4.3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test --if-present
+
+      - name: Install Dependencies
+        run: |
+          npm i
+          npm ci
+
+      - name: Format Code with Prettier
+        run: |
+          npm run format
+
+      - name: Lint Code with ESLint
+        run: |
+          npm run lint
+
+      - name: Run E2E Tests
+        run: |
+          npm run test:e2e
+
+      - name: Build the Backend Application
+        run: |
+          npm run build
