--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -56,11 +56,18 @@ jobs:
 
       - name: Set Environment Variables
         run: |
+          echo "PORT=3030" >> $GITHUB_ENV
           echo "DB_HOST=127.0.0.1" >> $GITHUB_ENV
           echo "DB_PORT=5432" >> $GITHUB_ENV
           echo "DB_USER=postgres" >> $GITHUB_ENV
           echo "DB_PASSWORD=password" >> $GITHUB_ENV
           echo "DB_NAME=testdb" >> $GITHUB_ENV
+          echo "DATABASE_URL=postgresql://postgres:password@localhost:5432/testdb" >> $GITHUB_ENV
+          echo "JWT_SECRET_KEY=NkM9Ci}gVsEjwfZI07gH@CEZ}?2h" >> $GITHUB_ENV
+          echo "JJWT_EXPIRATION_TIME=60m" >> $GITHUB_ENV
+          echo "SEED_USER_NAME=Admin" >> $GITHUB_ENV
+          echo "SEED_USER_EMAIL=admin@waddle.uk" >> $GITHUB_ENV
+          echo "SEED_PASSWORD=123456" >> $GITHUB_ENV
 
       - name: Wait for PostgreSQL to be ready
         run: |
@@ -68,6 +75,11 @@ jobs:
             echo "Waiting for PostgreSQL to be ready..."
             sleep 1
           done
+
+      - name: Run migration and seed data
+        run: |
+          npx prisma migrate dev --name init
+          npx prisma db seed
 
       - name: Format Code with Prettier
         run: |
