--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -28,7 +28,7 @@ jobs:
           POSTGRES_DB: testdb
           SEED_USER_NAME: Admin
           SEED_USER_EMAIL: admin@waddle.uk
-          SEED_PASSWORD: 123456
+          SEED_PASSWORD: 12345678
 
           PORT: 3030
           DATABASE_URL: 'postgresql://postgres:password@localhost:5432/testdb?schema=public'
@@ -67,7 +67,7 @@ jobs:
           echo "JWT_EXPIRATION_TIME=60m" >> $GITHUB_ENV
           echo "SEED_USER_NAME=Admin" >> $GITHUB_ENV
           echo "SEED_USER_EMAIL=admin@waddle.uk" >> $GITHUB_ENV
-          echo "SEED_PASSWORD=123456" >> $GITHUB_ENV
+          echo "SEED_PASSWORD=12345678" >> $GITHUB_ENV
 
       - name: Wait for PostgreSQL to be ready
         run: |
