--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -29,11 +29,20 @@ jobs:
           SEED_USER_NAME: Admin
           SEED_USER_EMAIL: admin@waddle.uk
           SEED_PASSWORD: 12345678
+          GOOGLE_CLIENT_ID: 237136003048-3mlogbmva2mmbscg5klvuv861ktvjmen.apps.googleusercontent.com
+          GOOGLE_CLIENT_SECRET: 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
+          GOOGLE_CALLBACK_URL: http://localhost:3030/api/v1/auth/google/callback
+
+          FACEBOOK_CLIENT_ID: 464940513010541
+          FACEBOOK_CLIENT_SECRET: 2c9a12d4b7790dac7cb34c707b3aa2fa
+          FACEBOOK_CALLBACK_URL: http://localhost:3030/api/v1/auth/facebook/redirect
 
           PORT: 3030
           DATABASE_URL: 'postgresql://postgres:password@localhost:5432/testdb?schema=public'
           JWT_SECRET_KEY: NkM9Ci}gVsEjwfZI07gH@CEZ}?2h
           JWT_EXPIRATION_TIME: '60m'
+          VERIFICATION_URL: http://localhost:5173/auth/verification
+          PASSWORD_RESET_URL: http://localhost:5173/auth/resetpassword
 
         options: >-
           --health-cmd="pg_isready" 
@@ -68,6 +77,14 @@ jobs:
           echo "SEED_USER_NAME=Admin" >> $GITHUB_ENV
           echo "SEED_USER_EMAIL=admin@waddle.uk" >> $GITHUB_ENV
           echo "SEED_PASSWORD=12345678" >> $GITHUB_ENV
+          echo "GOOGLE_CLIENT_ID=237136003048-3mlogbmva2mmbscg5klvuv861ktvjmen.apps.googleusercontent.com" >> $GITHUB_ENV
+          echo "GOOGLE_CLIENT_SECRET=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" >> $GITHUB_ENV
+          echo "GOOGLE_CALLBACK_URL=http://localhost:3030/api/v1/auth/google/callback" >> $GITHUB_ENV
+          echo "FACEBOOK_CLIENT_ID=464940513010541" >> $GITHUB_ENV
+          echo "FACEBOOK_CLIENT_SECRET=2c9a12d4b7790dac7cb34c707b3aa2fa" >> $GITHUB_ENV
+          echo "FACEBOOK_CALLBACK_URL=http://localhost:3030/api/v1/auth/facebook/redirect" >> $GITHUB_ENV
+          echo "VERIFICATION_URL=http://localhost:5173/auth/verification" >> $GITHUB_ENV
+          echo "PASSWORD_RESET_URL=http://localhost:5173/auth/resetpassword" >> $GITHUB_ENV
 
       - name: Wait for PostgreSQL to be ready
         run: |
