--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -43,6 +43,15 @@ jobs:
           JWT_EXPIRATION_TIME: '60m'
           VERIFICATION_URL: http://localhost:5173/auth/verification
           PASSWORD_RESET_URL: http://localhost:5173/auth/resetpassword
+          SMTP_HOST: wghp1.wghservers.com
+          SMTP_PORT: 465
+          SMTP_USER: test@philipoyelegbin.com.ng
+          SMTP_PASSWORD: NXjHG(m2FATc
+          BUCKET_NAME: waddletestbucket
+          ACCESS_KEY_ID: 6e30f43a6e34bb6db106299fc0480d7e
+          SECRET_ACCESS_KEY: 9db13a6ed03697aa77daf530e53b5ab5df74e059e89693ea12b167a79a9e9fb5
+          R2_PUBLIC_ENDPOINT: https://pub-42f91b17061547449f97974510335219.r2.dev
+          S3_API: https://81c852930641402981b6a613c8239927.r2.cloudflarestorage.com
 
         options: >-
           --health-cmd="pg_isready" 
@@ -85,6 +94,15 @@ jobs:
           echo "FACEBOOK_CALLBACK_URL=http://localhost:3030/api/v1/auth/facebook/redirect" >> $GITHUB_ENV
           echo "VERIFICATION_URL=http://localhost:5173/auth/verification" >> $GITHUB_ENV
           echo "PASSWORD_RESET_URL=http://localhost:5173/auth/resetpassword" >> $GITHUB_ENV
+          echo "SMTP_HOST=wghp1.wghservers.com" >> $GITHUB_ENV
+          echo "SMTP_PORT=465" >> $GITHUB_ENV
+          echo "SMTP_USER=test@philipoyelegbin.com.ng" >> $GITHUB_ENV
+          echo "SMTP_PASSWORD=NXjHG(m2FATc" >> $GITHUB_ENV
+          echo "BUCKET_NAME=waddletestbucket" >> $GITHUB_ENV
+          echo "ACCESS_KEY_ID=6e30f43a6e34bb6db106299fc0480d7e" >> $GITHUB_ENV
+          echo "SECRET_ACCESS_KEY=9db13a6ed03697aa77daf530e53b5ab5df74e059e89693ea12b167a79a9e9fb5" >> $GITHUB_ENV
+          echo "R2_PUBLIC_ENDPOINT=https://pub-42f91b17061547449f97974510335219.r2.dev" >> $GITHUB_ENV
+          echo "S3_API=https://81c852930641402981b6a613c8239927.r2.cloudflarestorage.com" >> $GITHUB_ENV
 
       - name: Wait for PostgreSQL to be ready
         run: |
