--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.726.1",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.4.15",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.0.7",
+    "@nestjs/throttler": "^6.3.0",
     "@prisma/client": "^5.22.0",
     "@types/multer": "^1.4.12",
     "argon2": "^0.41.1",
