--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/throttler": "^6.3.0",
     "@prisma/client": "^5.22.0",
