--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/throttler": "^6.3.0",
     "@prisma/client": "^5.22.0",
+    "@stripe/stripe-js": "^5.6.0",
     "@types/multer": "^1.4.12",
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
