--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.726.1",
+    "@freshworks/freshdesk": "^0.0.1",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
@@ -41,6 +42,7 @@
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "freshdesk-api": "^3.1.0",
     "nodemailer": "^6.9.16",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
