--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "firebase-admin": "^13.3.0",
     "freshdesk-api": "^3.1.0",
     "nodemailer": "^6.9.16",
     "passport-facebook": "^3.0.0",
