--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   deploy:
     name: Deploy to EC2
-    runs-on: almalinux-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
