--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
             echo "Deploying to EC2 instance..."
             cd /home/ec2-user/waddle-api && \
             echo "Updating code from repository..." && \
-            git fetch origin main && \
+            git pull origin main && \
             git reset --hard origin/main && \
             echo "Installing dependencies..." && \
             npm ci --omit=dev && \
