--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "postmark": "^4.0.5",
     "redoc-express": "^2.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "speakeasy": "^2.0.0",
     "stripe": "^17.6.0"
   },
   "devDependencies": {
