--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
             echo "Deploying to EC2 instance..."
             cd /home/ec2-user/waddle-api && \
             echo "Updating code from repository..." && \
-            git pull && \
+            git pull https://github.com/PhilipOyelegbin/waddleapp-api.git main && \
             echo "Installing dependencies..." && \
             npm ci --omit=dev && \
             echo "Creating .env file..." && \
