--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -4,7 +4,7 @@ name: Test and Build
 
 on:
   push:
-    branches: [staging]
+    branches: [main, staging]
   pull_request:
     types: [opened, reopened]
     branches: [main]
