--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "redoc-express": "^2.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.3",
     "speakeasy": "^2.0.0",
     "stripe": "^17.6.0"
   },
