--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -113,6 +113,7 @@ jobs:
           echo "SMTP_PASSWORD=NXjHG(m2FATc" >> $GITHUB_ENV
           echo "BUCKET_NAME=waddletestbucket" >> $GITHUB_ENV
           echo "ACCESS_KEY_ID=6e30f43a6e34bb6db106299fc0480d7e" >> $GITHUB_ENV
+          echo "AWS_REGION=eu-north-1"  >> $GITHUB_ENV
           echo "SECRET_ACCESS_KEY=9db13a6ed03697aa77daf530e53b5ab5df74e059e89693ea12b167a79a9e9fb5" >> $GITHUB_ENV
           echo "R2_PUBLIC_ENDPOINT=https://pub-42f91b17061547449f97974510335219.r2.dev" >> $GITHUB_ENV
           echo "S3_API=https://81c852930641402981b6a613c8239927.r2.cloudflarestorage.com" >> $GITHUB_ENV
