--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -49,7 +49,9 @@ jobs:
           SMTP_USER: test@philipoyelegbin.com.ng
           SMTP_PASSWORD: NXjHG(m2FATc
           BUCKET_NAME: waddletestbucket
-          ACCESS_KEY_ID: 6e30f43a6e34bb6db106299fc0480d7e
+          ACCESS_KEY_ID:  ${{ secrets.ACCESS_KEY_ID }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          
           SECRET_ACCESS_KEY: 9db13a6ed03697aa77daf530e53b5ab5df74e059e89693ea12b167a79a9e9fb5
           R2_PUBLIC_ENDPOINT: https://pub-42f91b17061547449f97974510335219.r2.dev
           S3_API: https://81c852930641402981b6a613c8239927.r2.cloudflarestorage.com
