--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -65,17 +65,17 @@ jobs:
           FRESHDESK_EMAIL: support@philipoyelegbincom.freshdesk.com
           FRESHDESK_API_KEY: nIV3Lubwi6Eo0qWM24Sy
 
-          FIREBASE_TYPE: ${{ secrets.FIREBASE_TYPE }}
-          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-          FIREBASE_PRIVATE_KEY_ID: ${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
+          FIREBASE_TYPE: service_account
+          FIREBASE_PROJECT_ID: waddle-push-notification
+          FIREBASE_PRIVATE_KEY_ID: cac17d4e74c15f012a77cc53f52dd1d59cbed31e
           FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
-          FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
-          FIREBASE_CLIENT_ID: ${{ secrets.FIREBASE_CLIENT_ID }}
-          FIREBASE_AUTH_URI: ${{ secrets.FIREBASE_AUTH_URI }}
-          FIREBASE_TOKEN_URI: ${{ secrets.FIREBASE_TOKEN_URI }}
-          FIREBASE_AUTH_PROVIDER_CERT_URL: ${{ secrets.FIREBASE_AUTH_PROVIDER_CERT_URL }}
-          FIREBASE_CLIENT_CERT_URL: ${{ secrets.FIREBASE_CLIENT_CERT_URL }}
-          FIREBASE_UNIVERSE_DOMAIN: ${{ secrets.FIREBASE_UNIVERSE_DOMAIN }}
+          FIREBASE_CLIENT_EMAIL: firebase-adminsdk-fbsvc@waddle-push-notification.iam.gserviceaccount.com
+          FIREBASE_CLIENT_ID: 113261042783839410702
+          FIREBASE_AUTH_URI: https://accounts.google.com/o/oauth2/auth
+          FIREBASE_TOKEN_URI: https://oauth2.googleapis.com/token
+          FIREBASE_AUTH_PROVIDER_CERT_URL: https://www.googleapis.com/oauth2/v1/certs
+          FIREBASE_CLIENT_CERT_URL: https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-fbsvc%40waddle-push-notification.iam.gserviceaccount.com
+          FIREBASE_UNIVERSE_DOMAIN: googleapis.com
 
         options: >-
           --health-cmd="pg_isready" 
