--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -91,9 +91,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Clean up dependencies
+        run: rm -rf node_modules package-lock.json
+
       - name: Install Dependencies
         run: |
-          npm i
           npm ci
 
       - name: Set Environment Variables
