--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /build
 /bin
 
+/src/notification/serviceAccount.ts
+
 # Logs
 logs
 *.log
@@ -58,3 +60,6 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 .env.prod
+
+
+
